golang-http/deployment/envoy-bu.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: envoy
  name: envoy

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  namespace: envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envoy
  template:
    metadata:
      labels:
        app: envoy
    spec:
      containers:
        - name: envoy
          image: jatrat/envoy-gateway:v0.0.13
          command: ["/usr/local/bin/envoy"]
          args: ["--log-level", "debug" , "-c", "/etc/envoy/envoy.yaml"]
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: envoy-config
              mountPath: /etc/envoy
      volumes:
        - name: envoy-config
          configMap:
            name: envoy-configmap

---

apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy-configmap
  namespace: envoy
data:
  envoy.yaml: |
    static_resources:
      listeners:
        - address:
            socket_address:
              address: 0.0.0.0
              port_value: 8443
          filter_chains:
            - filters:
                - name: envoy.filters.network.http_connection_manager
                  typed_config: 
                    "@type" : type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                    stat_prefix: http_proxy
                    route_config:
                      name: all
                      virtual_hosts:
                        - name: upstream
                          domains:
                            - '*'
                          routes:
                            - match: { prefix: "/" }
                              route:
                                cluster: upstream
                                prefix_rewrite: "/"
                    http_filters:
                      - name: envoy.filters.http.golang
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                          library_id: simple
                          library_path: "/lib/simple.so"
                          plugin_name: simple
                          plugin_config:
                            "@type": type.googleapis.com/xds.type.v3.TypedStruct
                            value:
                              token_filepath: "/var/run/secrets/kubernetes.io/serviceaccount/token"
                      - name: envoy.filters.http.router
                        typed_config:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                          upstream_http_filters:
                          - name: upstream_header
                            typed_config:
                              '@type': type.googleapis.com/envoy.extensions.filters.http.header_mutation.v3.HeaderMutation
                              mutations:
                                request_mutations:
                                  append:
                                    header:
                                      key: "authorization"
                                      value: "b"
                          - name: envoy.filters.http.upstream_codec
                            typed_config:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.upstream_codec.v3.UpstreamCodec
              transport_socket:
                name: envoy.transport_sockets.tls
                typed_config:
                  "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
                  common_tls_context:
                    tls_certificates:
                    # The following self-signed certificate pair is generated using:
                    # $ openssl req -x509 -newkey rsa:2048 -keyout a/front-proxy-key.pem -out  a/front-proxy-crt.pem \
                    #       -days 3650 -nodes -subj '/CN=front-envoy'
                    #
                    # Instead of feeding it as an inline_string, certificate pair can also be fed to Envoy
                    # via filename. Reference: https://envoyproxy.io/docs/envoy/latest/api-v3/config/core/v3/base.proto#config-core-v3-datasource.
                    #
                    # Or in a dynamic configuration scenario, certificate pair can be fetched remotely via
                    # Secret Discovery Service (SDS). Reference: https://envoyproxy.io/docs/envoy/latest/configuration/security/secret.
                    - certificate_chain:
                        inline_string: |
                          -----BEGIN CERTIFICATE-----
                          MIICqDCCAZACCQCquzpHNpqBcDANBgkqhkiG9w0BAQsFADAWMRQwEgYDVQQDDAtm
[...]
                          m+/R4XnmL4cKQ+5Z
                          -----END CERTIFICATE-----
                      private_key:
                        inline_string: |
                          -----BEGIN PRIVATE KEY-----
                          MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQC2GdiSpVAFf5aD
[...]
                          q5sGxGrC1RECGB5Zwx2S2ZY=
                          -----END PRIVATE KEY-----
      clusters:
      - name: upstream
        http2_protocol_options: {}
        connect_timeout: 
          seconds: 10
        type: STRICT_DNS
        transport_socket:
          name: envoy.transport_sockets.tls
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        load_assignment:
          cluster_name: upstream
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: httpbin.org
                    port_value: 443
        lb_policy: ROUND_ROBIN
    admin:
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 9901


---

apiVersion: v1 
kind: Service 
metadata: 
  labels: 
    app: envoy 
  name: envoy 
  namespace: envoy 
spec: 
  ports: 
  - name: 8443-8443
    port: 8443
    protocol: TCP 
    targetPort: 8443
  selector: 
    app: envoy 
  type: ClusterIP 

---

apiVersion: v1 
kind: Service 
metadata: 
  labels: 
    app: envoy 
  name: prometheus 
  namespace: envoy 
spec: 
  ports: 
  - name: 9901-9901 
    port: 9901 
    protocol: TCP 
    targetPort: 9901 
  selector: 
    app: envoy 
  type: ClusterIP
